# mathesis

./: .gitignore  .readthedocs.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
alternatives/: index.html
contributing/: index.html
docs/: alternatives.md  contributing.md  index.md  install.md  jupyter.md  jupyter.py  requirements.txt
docs/overrides/: main.html
docs/usage/: automated-reasoning.md  grammars.md  kripke.md  latex.md  models.py  natural-deduction.md  sequent-calculi.md  set-theoretic.md  tableaux.md  truth-tables.md  truth-tables.py
install/: index.html
js/: mathjax.js
jupyter/: index.html
mathesis/: _utils.py  forms.py  grammars.py  solvers.py
mathesis/deduction/hilbert/: axioms.py  hilbert.py  rules.py
mathesis/deduction/natural_deduction/: __init__.py  derivation.py  natural_deduction.py  rules.py
mathesis/deduction/sequent_calculus/: __init__.py  rules.py  sequent.py  sequent_tree.py  sequents.py
mathesis/deduction/tableau/: __init__.py  rules.py  signed_rules.py  tableau.py
mathesis/semantics/: model.py
mathesis/semantics/truth_table/: __init__.py  base.py  classical.py  fde.py  k3.py  l3.py  lp.py
mathesis/system/classical/: __init__.py  truth_table.py
mathesis/system/intuitionistic/: __init__.py
mathesis/system/intuitionistic/sequent_calculus/: __init__.py  rules.py
mathesis/truth_values/: __init__.py  boolean.py  numeric.py
search/: search_index.json
usage/automated-reasoning/: index.html
usage/grammars/: index.html
usage/kripke/: index.html
usage/latex/: index.html
usage/models/: index.html
usage/natural-deduction/: index.html
usage/sequent-calculi/: index.html
usage/tableaux/: index.html
usage/truth-tables/: index.html
