[tool.poetry]
name = "mathesis"
version = "0.5.0"
description = "Formal logic library in Python for humans"
authors = ["Kentaro Ozeki <32771324+ozekik@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://mathesis.readthedocs.io/"
repository = "https://github.com/ozekik/mathesis"
keywords = ['logic', 'semantics', 'proof', 'philosophy']
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
lark = "^1.1.2"
anytree = "^2.8.0"
prettytable = "^3.3.0"

[tool.poetry.group.dev.dependencies]
black = { version = "^23.7.0", allow-prereleases = true }
ipykernel = "^6.13.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.1"
mkdocs-material = "^9.1.21"
mkdocstrings-python = "^1.2.1"
mkdocs-exclude = "^1.0.2"
markdown-exec = { extras = ["ansi"], version = "^1.6.0" }
mkdocs-jupyter = "^0.24.5"
notebook = "^6.5.6"
jupyter-contrib-nbextensions = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
