[project]
name = "mathesis"
version = "0.6.0"
description = "Formal logic library in Python for humans"
authors = [
    {name = "Kentaro Ozeki", email = "32771324+ozekik@users.noreply.github.com"}
]
readme = "README.md"
license = "MIT"
keywords = ['logic', 'semantics', 'proof', 'philosophy']

[project.urls]
homepage = "https://ozekik.github.io/mathesis/"
repository = "https://github.com/ozekik/mathesis"

[tool.poetry.dependencies]
python = "^3.9"
lark = "^1.1.2"
anytree = "^2.8.0"
prettytable = "^3.3.0"

[tool.poetry.group.dev.dependencies]
black = { version = "^25", allow-prereleases = true }
ipykernel = "^6.13.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.1"
mkdocs-material = "^9.1.21"
mkdocstrings-python = "^1.2.1"
mkdocs-exclude = "^1.0.2"
markdown-exec = { extras = ["ansi"], version = "^1.8.1" }
mkdocs-jupyter = "^0.25"
griffe-typingdoc = "^0.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
